--- a/style.css
+++ b/style.css
@@ -365,6 +365,8 @@ section {
 }
 
 #about .about{
+    display:flex;
+    flex-direction: row;
     flex-direction: column-reverse;
     text-align: center;
     max-width: 1200px;
@@ -375,13 +377,23 @@ section {
 }
 
 #about .col-left {
-    width: 4000px;
+    width: 400px;   
     height: 360px;
 }
 
 #about .col-right {
-    width: 100%;
+    width: 50%;
+    padding: 20px;
 }
+
+
+#about .col-left img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Keeps proportions */
+}
+
+
 
 #about .col-right h2 {
     font-size: 1.8rem;
@@ -693,5 +705,105 @@ section {
         transform: translateY(0);
     }
 }
+
+@media only screen and (min-width: 768px) {
+    .cta {
+        font-size: 2.5rem;
+        padding: 20px, 60px;
+    }
+    h1.section-title{
+        font-size: 6rem;
+    }
+    #one h1{
+        font-size:7rem;
+    }
+    #services .service-bottom .service-item{
+        flex-basis: 45%;
+        margin: 2.5%;
+    }
+
+    #projects .project-item{
+        flex-direction: row;
+
+    }
+    #projects .project-item:nth-child(even){
+        flex-direction: row-reverse;
+    }
+    #projects .project-item{
+        height: 400px;
+        margin: 0;
+        width: 100%;
+        border-radius: 0;
+    }
+    #projects .all-projects .project-info{
+        height: 100%;
+    }
+    #projects .all-projects .project-img {
+        height:100%;
+    }
+
+    #about .about{
+        flex-direction: row;
+    }
+    #about .col-left {
+        width: 600px;
+        height: 400px;
+        padding-left: 600px;
+    }
+    
+    #about .col-left .about-img{
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+    
+    #about .col-right{
+        text-align: left;
+        padding: 30px;
+    }
+    #about .col-right h1 {
+        text-align: left;
+    }
+    #contact .contact{
+        flex-direction: column;
+        padding: 100px 0;
+        align-items: center;
+        justify-content: center;
+        min-width: 20vh;
+    }
+    #contact .contact-items{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+    #contact .contact-item{
+        width: 30%;
+        margin: 0;
+        flex-direction: row;
+    }
+    #contact .contact-item .icon{
+        height: 100px;
+        width: 100px
+    }
+    #contact .contact-item .icon img{
+        object-fit: contain;
+    }
+    #contact .contact-item .contact-info{
+        width:100%;
+        text-align: left;
+        padding-left:20px;
+    }
+
+    @media only screen and(min-width:1200px) {
+        
+    }
+}
+
+
+
+
+
 
  
