--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@
 html{
     font-size:10px;
     font-family: 'lora', sans-serif;
-    
+    scroll-behavior: smooth;
     color: black
 }
+
+
 a{
     text-decoration: none
 
@@ -81,6 +83,56 @@ img {
 .brand h1 span {
     color: black;
 }
+
+#header {
+    position: fixed;
+    z-index:1000;
+    top:0;
+    height: auto;
+    width: 100%;
+    left:0;
+
+}
+#header .header {
+    min-height: 8vh;
+    background-color: rgba(31, 30, 30, 0.24) 
+}
+
+
+
+
+
+
+.nav-list li {
+  display: inline-block;
+  margin: 0 15px; /* Adjust horizontal spacing */
+  position: relative;
+}
+
+.nav-list li::before {
+  content: "•";
+  position: absolute;
+  left: -15px; /* Position dot */
+  color: white; /* Dot color */
+}
+
+
+
+.nav-list a {
+  padding-left: 5px; /* Space between dot and text */
+}
+
+.header .nav-bar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    max-width: 1300px;
+    padding: 0 10px;
+}
+
+
 
 h1 {
   font-size: 3rem;
@@ -235,7 +287,7 @@ h1 {
 #projects .projects{
     flex-direction: column;
     padding: 100px, 0;
-    max-width:1200px;
+    max-width:900px;
     margin: 0 auto;
     padding: 100px 0;
     background: linear-gradient(135deg, #f5f7fa 0%, #e4e8eb 100%);
@@ -314,9 +366,9 @@ h1 {
 .project-img {
   display: block;
   width: 90%; /* Leaves 10% space on sides */
-  height: 280px; /* Slightly taller for better fit */
-  margin: 20px auto; /* Vertical and horizontal spacing */
-  padding: 10px; /* Internal spacing */
+  height: 180px; /* Slightly taller for better fit */
+  margin: 6px auto; /* Vertical and horizontal spacing */
+  padding: 6px; /* Internal spacing */
   overflow: hidden;
   border-radius: 10px;
   background: #f8f8f8; /* Light background for padding area */
